--- a/src/pages/members/Members.css
+++ b/src/pages/members/Members.css
@@ -11,3 +11,10 @@
 .custom-table-row:hover {
     background-color: #f1f1f1; /* Example custom row hover color */
 }
+
+
+.table-row {
+    height: 50px; /* Adjust as needed */
+    overflow: hidden; /* Prevent overflow */
+  }
+  
