--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +7,7 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Inter", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -14,12 +17,20 @@
     @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full;
   }
 
+  .wrapper-nav {
+    @apply max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 w-full;
+  }
+
   .flex-center {
     @apply flex justify-center items-center;
   }
 
   .flex-between {
     @apply flex justify-between items-center;
+  }
+
+  .button-yellow-outline {
+    @apply text-white px-4 py-1.5 border-2 border-yellow-300 rounded-lg hover:bg-red-700 transition-colors duration-300;
   }
 
   .background {
