--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -7,8 +9,8 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Inter", sans-serif;
   scroll-behavior: smooth;
+  @apply font-body;
 }
 
 /* ======= TAILWIND STYLES ======= */
