--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@
     @apply flex justify-between items-center;
   }
 
+  .main-heading {
+    @apply font-heading text-4xl font-bold mb-4 md:text-6xl md:mb-8;
+  }
+
   .button-yellow-outline {
     @apply text-white px-4 py-1.5 border-2 border-yellow-300 rounded-lg hover:bg-red-700 transition-colors duration-300;
   }
