--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,14 @@
   .background {
     @apply absolute inset-0 h-full w-full bg-white bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-[size:24px_24px];
   }
+
+  .scrollbar-thin::-webkit-scrollbar-thumb {
+    @apply rounded-lg;
+  }
+
+  .scrollbar-thin::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
 }
 @layer base {
   :root {
